<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_app_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/login_default_margin"
            android:contentDescription="@string/app_name"
            app:layout_constraintDimensionRatio="h,1:0.3"
            app:layout_constraintEnd_toEndOf="@id/guideline_r"
            app:layout_constraintStart_toStartOf="@id/guideline_l"
            app:layout_constraintTop_toTopOf="@id/guideline_t"
            app:srcCompat="@drawable/ic_farming" />


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_welcome_margin_top"
            android:text="@string/login_welcome_text"
            android:textAppearance="@style/TextAppearance.App.H2"
            app:layout_constraintEnd_toEndOf="@id/guideline_r"
            app:layout_constraintStart_toStartOf="@id/guideline_l"
            app:layout_constraintTop_toBottomOf="@id/img_app_icon" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_message"
            android:textAppearance="@style/TextAppearance.App.Body"
            app:layout_constraintEnd_toEndOf="@id/guideline_r"
            app:layout_constraintStart_toStartOf="@id/guideline_l"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_id_input"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_first_text_input_margin_top"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="@id/guideline_r"
            app:layout_constraintStart_toStartOf="@id/guideline_l"
            app:layout_constraintTop_toBottomOf="@id/tv_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_text_input_margin"
            android:hint="@string/password_hint"
            app:layout_constraintEnd_toEndOf="@id/guideline_r"
            app:layout_constraintStart_toStartOf="@id/guideline_l"
            app:layout_constraintTop_toBottomOf="@id/email_id_input"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.App.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top"
            android:text="@string/login_btn_text"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="@id/guideline_b"
            app:layout_constraintEnd_toEndOf="@id/guideline_r"
            app:layout_constraintStart_toStartOf="@id/guideline_l"
            app:layout_constraintTop_toBottomOf="@id/password_input" />


        <include layout="@layout/app_guidelines" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

